# pyproject.toml

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "LabJackProcessing"
description = "Basic template of a python repository"
readme = "README.md"
authors = [{ name = "LabJackProcessing", email = "queen.philip@gmail.com" }]
license = { file = "LICENSE" }




classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", #https://www.gnu.org/philosophy/open-source-misses-the-point.en.html
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
] #additional classifiers can be found here: https://pypi.org/classifiers/

keywords = ["basic",
            "template",
            "python",
            "repository"] #change these to your project keywords

dependencies = ["pytest",
                "PyQt6",
                "rich"] #add additional dependencies here - try to pin versions as minimally as possible

requires-python = ">=3.8"

dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[tool.bumpver] #bump the version by entering `bumpver update` in the terminal
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ["{version}"]
"LabJackProcessing/__init__.py" = ["{version}"]


[project.scripts]
LabJackProcessing = "LabJackProcessing.__main__:main"
LabJackProcessing-gui = "LabJackProcessing.gui.gui:run_gui_window"
